--- a/AppStore/版本记录.md
+++ b/AppStore/版本记录.md
@@ -60,6 +60,15 @@
 >②.引入腾讯Bugly异常上报和运营统计SDK;
 
 ---
+
+><span style="color:red">*推推管家 (版本 1.0.6)更新内容如下:</span>
+>V 1.0.5打包异常，链接到测试库了，2017年05月27日11:01:40重新提交了一个包链接生产地址；
+>①.我的/去评分/点赞 直接到AppStore评分或评论 亦可更新下载；
+>②.功能/推送信息查询 图文文案支持大图预览；
+>③.功能/推送信息查询 链接文案支持点击Safari打开；
+
+---
+
 >*其他紧急问题请联系开发人员【 倪新生 QQ:1911398892 微信号:wvqusrtg】
 
 ><span style="color:red">*其他紧急问题请联系开发人员【 倪新生 QQ:1911398892 手机:15001291877】</span>
