--- a/aliECS/阿里云服务器学习.md
+++ b/aliECS/阿里云服务器学习.md
@@ -1,7 +1,11 @@
 
 >[(1)阿里云服务器学习地址](https://help.aliyun.com/document_detail/25367.html?spm=5176.product25365.6.539.HghrSEd)
 
->[(2)阿里ECS配置https支持](阿里ECS配置https支持.png)
->![(2)阿里ECS配置https支持](阿里ECS配置https支持.png)
+>[(2)阿里ECS配置https支持](./Res/阿里ECS配置https支持.png)
+>![(2)阿里ECS配置https支持](./Res/阿里ECS配置https支持.png)
 
 ---
+
+阿里OSS接入：
+![](./Res/蚂蚁推推接入OSS0.jpeg)
+![](./Res/蚂蚁推推接入OSS1.jpeg)
